--- a/exercicios/ex019/style.css
+++ b/exercicios/ex019/style.css
@@ -1,4 +1,4 @@
-@charset "UTF-8"
+@charset "UTF-8";
 
 @import url('https://fonts.googleapis.com/css2?family=Playwrite+AU+TAS:wght@100..400&family=Ubuntu:wght@300&display=swap');
 
