--- a/desafios/desafio12/style.css
+++ b/desafios/desafio12/style.css
@@ -1,11 +1,20 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Boldonse&family=Caveat:wght@400..700&display=swap');
+
+:root {
+    --font1: 'Caveat', cursive;
+    --font2: 'Boldonse', cursive;
+    --font3: 'times new roman', serif;
+}
+
 * {
     margin: 0;
     padding: 0;
 }
 
 html, body {
+    font-family: var(--font2);
     min-height: 100%;
     background-color: darkgray;
 }
@@ -19,10 +28,13 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 4vw;
 }
 
 header > p {
     padding-bottom: 50px;
+    font-size: 1.6vw;
 }
 
 header a, footer a {
@@ -43,10 +55,13 @@ section.normal {
 section {
     padding: 10% 0 10% 30px;
     line-height: 2em;
+    font-family: var(--font1);
+    font-size: 2.5vw;
 }
 
 section.imagem > p {
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(44, 42, 42, 0.308);
 }
 
@@ -60,4 +75,5 @@ footer {
     color: white;
     text-align: center;
     padding: 10px;
+    font-family: var(--font3);
 }
